# E-Shop-Scrapper-PRO

./: .gitignore  .~lock.rcfminibikes.csv#  EScraperPRO.config  EScraperPRO.py  README.md  e_shop_scrapper_pro.py  es2scraper.py  es2sparser.py  pyproject.toml  rcfminibikes.csv  requirements.txt  rhapsodybikeparts.csv  secure.config  setup.py  siteconfig.json  siteconfig.py
EscrapperPRO/: EScrapperPRO.py  __main__.py
EscrapperPRO/configs/: EScraperPRO.config  EScraperPRO.private  secure.config  secure.private
utils/: config.py
